<resources>
    <string name="app_name">УЭЦНщик</string>
    <string name="calc_main_head">Электрические расчёты</string>
    <string name="tap_calc_head">Подбор и расчёты</string>
    <string name="calc_res">¯\\_(ツ)_/¯</string>
    <string name="motor_title">Характеристики ПЭД</string>
    <string name="motor_voltage">U(В)@50Гц</string>
    <string name="motor_power">P@50Гц</string>
    <string name="motor_curent">Iном(A)</string>
    <string name="cable_title">Характеристики кабеля</string>
    <string name="cable_crossection">S,мм2:</string>
    <string name="cable_length">Длина,м</string>
    <string name="stantion_title">Характеристики СУ</string>
    <string name="stantion_voltage">U(ном),В:</string>
    <string name="stantion_base_freq">Fб,Гц:</string>
    <string name="stantion_output_voltage">U(б.вых), В:</string>
    <string name="transformer_title">Характеристики ТМПН</string>
    <string name="transformer_power">P(кВА)</string>
    <string name="transformer_impedance">Имп.%</string>
    <string name="transformer_lsv">Uнс,В:</string>
    <string name="selection_title">Подбор НЭО</string>
    <string name="selection_transformer">Запас ТМПН, %</string>
    <string name="selection_stantion">Запас СУ, %</string>
    <string name="power_title">Характеристики сети питания</string>
    <string name="power_voltage">Uпит,В</string>
    <string name="power_type_HP">ЛС</string>
    <string name="power_type_kvt">кВт</string>
    <string name="stantion_current_res_title">Номин. ток:</string>
    <string name="stantion_out_current_res_title">Вых. ток:</string>
    <string name="transformer_power_res_title">Номин. мощн.:</string>
    <string name="transforner_tap_res_title">Отпайка:</string>
    <string name="recommendation">Рекоменд.</string>
    <string name="cable_res_drop_voltage">Паден. напряж.:</string>
    <string name="motor_voltage_res1">U(В)@</string>
    <string name="frequency_measurement_val">Гц</string>
    <string name="power_measurement_val">кВА</string>
    <string name="voltage_measurement_val">В</string>
    <string name="current_measurement_val">А</string>
    <string name="cable_total_length">Общая дл.:</string>
    <string name="length_measurement_val">м</string>
    <string name="first_menu_name">Выбор расчёта</string>
    <string name="menu1_button1">Подбор НЭО, Расчёт отпайки</string>
    <string name="menu1_button2">Анализ запуска ПЭД</string>
    <string name="menu1_button3">Дисбаланс значений</string>
    <string name="selector_frame_title">Электрические расчёты</string>
    <string name="stantion_oper_freq">Fр,Гц:</string>
    <string name="transformer_out_voltage">U(отп),В:</string>
    <string name="se_characteristics">Настройки НЭО</string>
    <string name="transforner_tap_res_title2">Рекомменд. отп., В:</string>
    <string name="graf1_title">График напряжений ПЭД</string>
    <string name="chart1_txt1">X: U-ПЭД, (%) Y: U-ПЭД, (В)</string>
    <string name="chart1_txt2">Напряж. на ПЭД без потерь, В</string>
    <string name="chart1_txt3">Напряж. на ПЭД с потерями, В</string>
    <string name="chart1_txt5">Факт. напряж. на ПЭД, В</string>
    <string name="chart1_txt4">Напряж. запуска ПЭД, В</string>
    <string name="actual_out_voltage1">Uвых.факт.@</string>
    <string name="actual_out_voltage2">Гц(В):</string>
    <string name="startup_res_pos">Запуcк ПЭД возможен</string>
    <string name="startup_res_neg">Запуск ПЭД маловероятен</string>
    <string name="current_unballance_header1">Значения по фазам</string>
    <string name="current_unballance_val">%</string>
    <string name="current_unballance_header2">Дисбаланс</string>
    <string name="current_phaseA">Фаза А</string>
    <string name="current_phaseB">Фаза B</string>
    <string name="current_phaseC">Фаза C</string>
    <string name="selector_second_frame_title">Расчёты по погружному оборудованию</string>
    <string name="menu2_button1">Расчёты по насосу</string>
    <string name="pump_title">Характеристики насоса</string>
    <string name="pump_q">Q, м3/д@50Hz</string>
    <string name="pump_h">H, м@50Hz</string>
    <string name="pump_p">P@50Hz</string>
    <string name="pump_s">Ступ., шт</string>
    <string name="tubing_title">Характеристики НКТ</string>
    <string name="pump_oper_val_title">Характеристики насоса на Fраб.:</string>
    <string name="pump_q_FOper">Q @</string>
    <string name="pump_h_FOper">H @</string>
    <string name="pump_p_FOper">P @</string>
    <string name="pump_head_characteristics">Напорные характеристики</string>
    <string name="well_title">Характеристики скважины</string>
    <string name="well_fluid_level">Уровень, м</string>
    <string name="well_casing_pressure">Pзатр.</string>
    <string name="well_head_pressure">Pбуф.</string>
    <string name="well_additional_title">Заполнить, если ур. не известен</string>
    <string name="well_intake_pressure">Pпр.</string>
    <string name="well_fluid_density">Плотн. кг/м3</string>
    <string name="well_liftDepth">Гл. спуска, м</string>
    <string name="chart2_txt1">X: F(35-70, Гц) Y: H (м)</string>
    <string name="chart2_txt2">ЛО КПД напора для насоса</string>
    <string name="chart2_txt3">ПДН - нефть, м@</string>
    <string name="chart2_txt4">ПДН - вода, м@</string>
    <string name="chart2_txt5">Напор насоса, м@</string>
    <string name="tubing_total_length">Общая длина трубы:</string>
    <string name="flow_type_title">Типы потоков жидкости</string>
    <string name="part1_fl_type_title">Участок 1:</string>
    <string name="flow_type_for_oil_title">- для нефти:</string>
    <string name="flow_type_for_water_title">- для воды:</string>
    <string name="part2_fl_type_title">Участок 2:</string>
    <string name="part3_fl_type_title">Участок 3:</string>
    <string name="flow_type_laminar">ламинарный</string>
    <string name="flow_type_turbulent1">турбулент., 1-я область</string>
    <string name="flow_type_turbulent2">турбулент., 2-я область</string>
    <string name="flow_type_turbulent3">турбулент., 3-я область</string>
    <string name="flow_type_transitional">переходн., расчёта нет</string>
    <string name="recommendation_title">Рекоммендации</string>
    <string name="recommendation1_title">Увеличение раб. частоты до:</string>
    <string name="recommendation2_title">Увеличение ступеней на Fраб. до:</string>
    <string name="recommendation3_title">Вне диапазона</string>
    <string name="dialog_title">Справка</string>
    <string name="app_version">Версия приложения:</string>
    <string name="time_of_flow_appearance">Время подачи жидкости</string>
    <string name="time_measurenent_val">мин</string>
    <string name="volume_measurement_val">м3</string>
    <string name="time_flow_appearance">Время подачи жидкости:</string>
    <string name="volume">Заполняемый объем:</string>
    <string name="tubing_total_volume">Общий объем,:</string>
    <string name="qty_measurement_val">шт</string>
    <string name="casing_title">Характеристики  труб ЭК</string>
    <string name="calculations_title">Расчёты</string>
    <string name="total_length_control">Необходимо ввести:</string>
    <string name="menu2_button2">Расчёт объёмов</string>
    <string name="vol_tubing_title">V1 - объём НКТ по D-внеш.:</string>
    <string name="vol_casing_title">V3 - объём ЭК по D-внутр.:</string>
    <string name="vol_res_title">V3 - V1:</string>
    <string name="vol_tubing_title2">V2 - объём НКТ по D-внутр.:</string>
    <string name="alert1">Введите не более:</string>
    <string name="alert_title">Предупреждение</string>
    <string name="total_fluid_vol_in_well">Объём жидкости в скважине:</string>
    <string name="incorrect_level">Уровень превышает длину труб</string>
    <string name="menu2_button3">Вывод на режим</string>
    <string name="comis_flow_appear_time_title">Появление подачи</string>
    <string name="comis_startup_title">Запуск</string>
    <string name="comis_measurement_title">Замер</string>
    <string name="button_timer_start">Запуск</string>
    <string name="button_timer_flow_appear">Появление подачи</string>
    <string name="button_timer_measurement">Замер</string>
    <string name="button_waiting">ВНР</string>
    <string name="comis_select_activity">Выберите активность</string>
    <string name="cancel_title">Отмена</string>
    <string name="comis_waiting_flow_appearance">Ожидание подачи</string>
    <string name="comis_waiting_measurement">Ожидание замера</string>
    <string name="button_add_title">Установить в...</string>
    <string name="startup_time_title">Время запуска:</string>
    <string name="fl_appearance_time_title">Время подачи:</string>
    <string name="calculation_title">Расчёты:</string>
    <string name="fl_appearance_calculation_vol_title">Откач. объём:</string>
    <string name="time_waiting">Время ожидания, мин.</string>
    <string name="fl_appearance_calculation_flow_title">Расч. дебит:</string>
    <string name="flow_measurement_val">м3/д</string>
    <string name="measured_volume">Изм. объём, м3</string>
    <string name="measured_flowrate">Изм. дебит, м3/д</string>
    <string name="inflow_calculation">Расч. приток:</string>
    <string name="measurement_time_title">Время замера:</string>
    <string name="cleaner_dialog1">Перед очисткой полей ВНР необходимо остановить замер времени.</string>
    <string name="cleaner_dialog2">Очистить поля ВНР?</string>
    <string name="cleaner_dialog_title">Уведомление</string>
    <string name="calculation_alert">Отриц. изм. уровня</string>
    <string name="enter_alert">Уровень не должен быть больше длины труб.</string>
    <string name="settings_theme_title">Тема приложения</string>
    <string name="change_theme_dialog">Изменения вступят в силу после перезагрузки приложения</string>
    <string name="settings_dialog_title_res">Изменение настроек</string>
    <string name="theme_name_lite_1">Белые ночи</string>
    <string name="theme_name_lite_2">Как сердце любимой</string>
    <string name="theme_name_lite_3">Светлая</string>
    <string name="theme_name_lite_4">Холодная как снег</string>
    <string name="theme_name_dark_1">Темные дни</string>
    <string name="theme_name_dark_2">Как сердце бывшей</string>
    <string name="theme_name_dark_3">Тёмная</string>
    <string name="theme_name_dark_4">Чёрная как нефть</string>
    <string name="theme_system_theme">Как в системе</string>
</resources>