<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu1.FragmentMenu1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_white_with_border"
            android:text="@string/menu1_button1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_white_with_border"
            android:elevation="12dp"
            android:text="@string/menu1_button2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="190dp"
            android:background="@drawable/square_white_with_border"
            android:elevation="12dp"
            android:text="@string/menu1_button3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@string/selector_frame_title"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background"
            android:backgroundTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>