<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ESPSpecialistHelper">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/icon_back"
                android:theme="@style/VectorStroke"
                app:title="@string/menu1_button3" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constLayout_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/set1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/square_white"
                        android:elevation="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:theme="@style/Theme.ESPSpecialistHelper">

                        <TextView
                            android:id="@+id/set1_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/current_unballance_header2"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/set1_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:text="-"
                            android:textColor="@color/red"
                            android:textSize="48sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/set1_title"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/set1_dim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_unballance_val"
                            android:textSize="48sp"
                            app:layout_constraintBottom_toBottomOf="@+id/set1_res"
                            app:layout_constraintStart_toEndOf="@id/set1_res"
                            app:layout_constraintTop_toTopOf="@+id/set1_res" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/set2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/square_white"
                        android:elevation="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/set1"
                        android:theme="@style/Theme.ESPSpecialistHelper">

                        <TextView
                            android:id="@+id/set2_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/current_unballance_header1"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout1"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="96dp"
                            android:layout_height="52dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:hint="@string/current_phaseA"
                            app:hintTextAppearance="@style/TextLabel"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/text_input_layout2"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/set2_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/i_a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:longClickable="false"
                                android:inputType="number|numberDecimal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout2"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:hint="@string/current_phaseB"
                            app:hintTextAppearance="@style/TextLabel"
                            app:layout_constraintBottom_toBottomOf="@id/text_input_layout1"
                            app:layout_constraintEnd_toStartOf="@+id/text_input_layout3"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/text_input_layout1"
                            app:layout_constraintTop_toTopOf="@id/text_input_layout1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/i_b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:longClickable="false"
                                android:inputType="number|numberDecimal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout3"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:hint="@string/current_phaseC"
                            app:hintTextAppearance="@style/TextLabel"
                            app:layout_constraintBottom_toBottomOf="@id/text_input_layout2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/text_input_layout2"
                            app:layout_constraintTop_toTopOf="@id/text_input_layout2">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/i_c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:longClickable="false"
                                android:inputType="number|numberDecimal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>